# 404less

./: ..pre-commit-config.yaml  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  sdd.db
.claude/: settings.local.json
.codacy/: codacy.yaml
.hypothesis/constants/: 0501ba71b131ad1d  082a13a68201c8eb  0c7bace27facc9f0  1f2e3d5d95c0a0aa  20269b9a373712b6  20bee580c09da86d  3208b38dfa9af5ef  3e9068ba0a1c187f  46d45a12469b1585  4ce056e584747e02  4dc5907a48c50b85  55ac36ea8db9ed60  57e806aedafd34f4  5c577e139914c097  636f022736afd6f7  67d855def70cfc3b  723b7b94491f9612  7349a8d62aece821  75d17e02e265bb0c  787f2b7af012d978  794a8511b84f5d52  80cf4da8106f2b34  8627495d2c30093f  97d49f56f9c1deec  9c458c38b1dc5527  b012a13764bacd70  b1398204665c82e6  b419c6eec83e3d7f  c2dffcf394d06d43  dcb1d58b2ed8892b  f078ac814996e77a
.sdd/: compliance-report.md  config.yaml  coverage-matrix.yaml
ci/: sdd-checks.yaml
contracts/python/: __init__.py
contracts/schemas/: email_verification_token.schema.json  login_attempt.schema.json  password_reset_token.schema.json  session.schema.json  user.schema.json
migrations/: 001_initial_schema.sql  002_add_sessions.sql  003_add_scanner_tables.sql
scripts/: profile_crawler.py
specs/: index.yaml
specs/api/: openapi.yaml
specs/architecture/: ADR-001-auth-strategy.md
specs/domain/: user.yaml
specs/features/: FEAT-001-user-registration.yaml  FEAT-002-user-login.yaml  FEAT-003-password-reset.yaml  _template.yaml  broken-link-scanner.yaml
src/: main.py
static/: app.js  index.html  styles.css
stubs/: email_service.py
(+759 files in other folders)
